# sredis

./: .gitignore  Makefile  Makefile.am  README.md  configure.ac  sredis-benchmark.c  sredis-example.c  sredis-transaction.c  sredis.c  sredis.h  sredis.pc.in  xerror.c  xerror.h  xobstack.c  xobstack.h
